Message shield alignment fixed

--- a/res/css/views/rooms/_EventTile.pcss
+++ b/res/css/views/rooms/_EventTile.pcss
@@ -822,6 +822,9 @@ $left-gutter: 64px;
     }
 }
 
+.mx_EventTile_e2eIcon_warning {
+    align-self: center;
+}
 .mx_EventTile_e2eIcon {
     position: relative;
     width: 14px;
